components/radix-platform/radix-prometheus-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    annotations:
      cert-manager.io/cluster-issuer: ${RADIX_WILDCARD_CERTIFICATE_ISSUER}
  labels:
    radix-app: radix-prometheus-proxy
    radix-component: radix-prometheus-proxy
  name: radix-prometheus-proxy
  namespace: monitor
spec:
  ingressClassName: nginx
  rules:
    - host: uptime.${AZ_RESOURCE_DNS:=tba}
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: monitor-radix-prometheus-proxy
                port:
                  number: 8000
    - host: uptme.${clusterName:=tba}.${AZ_RESOURCE_DNS:=tba}
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: monitor-radix-prometheus-proxy
                port:
                  number: 8000
  tls:
    - hosts:
        - uptime.${AZ_RESOURCE_DNS:=tba}
        - uptime.${clusterName:=tba}.${AZ_RESOURCE_DNS:=tba}
      secretName: "uptime-cert"
